# glue-experimental-plugins

./: .gitignore  .travis.yml  LICENSE  README.md  pv_slicer.py  setup.cfg  setup.py  tox.ini
glue-exp/importers/hdu_select/: hdu_select.py  hdu_select.ui
glue_exp/: __init__.py
glue_exp/importers/vizier/: __init__.py  qt_widget.py  vizier.ui  vizier_helpers.py
glue_exp/importers/webcam/: __init__.py  qt_widget.py  webcam.py  webcam.ui  webcam_helpers.py
glue_exp/menubar/reorder_categorical/: __init__.py  categorical.ui  qt_widget.py
glue_exp/tools/contour_selection/: __init__.py  contour_selection.py
glue_exp/tools/contour_selection/tests/: test_contour_selection.py
glue_exp/tools/dendrogram_selection/: __init__.py  dendrogram_selection.py
glue_exp/tools/floodfill_image_viewer/: floodfill_selection.py
glue_exp/tools/floodfill_selection/: __init__.py  floodfill_selection.py
glue_exp/tools/zoom_buttons/: __init__.py  zoom_buttons.py
