[metadata]
name = glue-exp
url = http://glueviz.org
author = Thomas Robitaille, Chris Beaumont
author_email = glueviz@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Experimental plugins for glue

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    glue-core>=0.15
    scipy
		scikit-image
    QtPy

[options.entry_points]
glue.plugins =
    webcam_importer = glue_exp.importers.webcam:setup
    vizier_importer = glue_exp.importers.vizier:setup
    contour_selection = glue_exp.tools.contour_selection:setup
    floodfill_selection = glue_exp.tools.floodfill_selection:setup
    zoom_buttons = glue_exp.tools.zoom_buttons:setup

[options.extras_require]
qt =
    PyQt5;python_version>="3"
test =
    pytest
    pytest-cov
    pytest-faulthandler
    mock
